--- a/proofs/propositional.ipynb
+++ b/proofs/propositional.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
      "text": [
       "input_str = ' imp  intro   4-8 '\n",
       "rule: imp intro\n",
-      "premise: [(4, 8)]\n",
+      "premise: ['4-8']\n",
       "\n",
       "output from __str__():\n",
       "  imp intro 4-8\n"
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -53,10 +53,10 @@
       "type: formula\n",
       "line: A imp B .hyp\n",
       "formula: A imp B\n",
-      "ann: hyp\n",
+      "ann: hyp \n",
       "is_hyp: True\n",
       "\n",
-      "A imp B\t .hyp\n"
+      "A imp B\t .hyp \n"
      ]
     }
    ],
@@ -71,15 +71,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "│1. A imp B\t .hyp\n",
-      "│2. A\t .hyp\n",
+      "│1. A imp B\t .hyp \n",
+      "│2. A\t .hyp \n",
       "├─\n",
       "│3. B\t .imp elim 1,2\n",
       "│4. A\t .repeat 2\n",
@@ -103,23 +103,23 @@
     "node4 = ProofNode(label4)\n",
     "label0 = NodeLabel()\n",
     "node0 = ProofNode(label0, [node1, node2, node3, node4])\n",
-    "node0.build_index()\n",
+    "node0.build_index() # necessary for printing node0\n",
     "print(node0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "│1. A imp B\t .hyp\n",
-      "│2. B imp C\t .hyp\n",
+      "│1. A imp B\t .hyp \n",
+      "│2. B imp C\t .hyp \n",
       "├─\n",
-      "││3. A\t .hyp\n",
+      "││3. A\t .hyp \n",
       "│├─\n",
       "││4. B\t .imp elim 1,3\n",
       "││5. C\t .imp elim 2,4\n",
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -337,15 +337,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "│1. A\t .hyp\n",
-      "│2. B\t .hyp\n",
+      "│1. A\t .hyp \n",
+      "│2. B\t .hyp \n",
       "├─\n",
       "│3. A and B\t .and intro\n",
       "\n"
@@ -366,17 +366,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "│1. A imp B\t .hyp\n",
-      "│2. B imp C\t .hyp\n",
+      "│1. A imp B\t .hyp \n",
+      "│2. B imp C\t .hyp \n",
       "├─\n",
-      "││3. A\t .hyp\n",
+      "││3. A\t .hyp \n",
       "│├─\n",
       "││4. B\t .imp elim 1,3\n",
       "││5. C\t .imp elim 2,4\n",
@@ -402,22 +402,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "│1. A imp B\t .hyp\n",
+      "│1. A imp B\t .hyp \n",
       "├─\n",
-      "││2. A or C\t .hyp\n",
+      "││2. A or C\t .hyp \n",
       "│├─\n",
-      "│││3. A\t .hyp\n",
+      "│││3. A\t .hyp \n",
       "││├─\n",
       "│││4. B\t .imp elim 1,3\n",
       "│││5. B or C\t .or intro 4\n",
-      "│││6. C\t .hyp\n",
+      "│││6. C\t .hyp \n",
       "││├─\n",
       "│││7. B or C\t .or intro 6\n",
       "││8. B or C\t .or elim 2,3-5,6-7\n",
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -510,9 +510,11 @@
     }
    ],
    "source": [
+    "# proof := parse_fitch(prf_str)\n",
+    "# index_dict = proof.build_index_dict()\n",
     "for i in index_dict:\n",
     "  for j in index_dict:\n",
-    "    label_j = proof.get_node(j).label\n",
+    "    label_j = proof.get_p_node(j).label\n",
     "    if label_j.type == 'formula' and not label_j.is_hyp: # conclusion\n",
     "      if proof.is_earlier(i, j):\n",
     "        print(f\"{i} <= {j}\") \n"
@@ -520,256 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "fmla = FormulaProp('bot')\n",
-    "node1 = parse_ast('not (A iff not C_1)')\n",
-    "node2 = parse_ast('A iff not C_1')\n",
-    "fmla.verified_by(RuleInfer.BOT_INTRO, [node1, node2])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "fmla.verified_by(RuleInfer.BOT_INTRO, [node2, node1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "node1 = parse_ast('bot')\n",
-    "fmla = FormulaProp('not (A iff not C_1)')\n",
-    "fmla.verified_by(RuleInfer.BOT_ELIM, [node1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "node1 = parse_ast('A imp bot')\n",
-    "fmla = FormulaProp('not A')\n",
-    "fmla.verified_by(RuleInfer.NOT_INTRO, [node1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "node1 = parse_ast('not A imp bot')\n",
-    "fmla = FormulaProp('A')\n",
-    "fmla.verified_by(RuleInfer.NOT_ELIM, [node1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 51,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "node1 = parse_ast('A imp B')\n",
-    "node2 = parse_ast('forall x B1(x)')\n",
-    "fmla = FormulaProp('forall x B1(x) and (A imp B)')\n",
-    "fmla.verified_by(RuleInfer.AND_INTRO, [node1, node2])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 52,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "node2 = parse_ast('A imp B')\n",
-    "node1 = parse_ast('forall x B1(x)')\n",
-    "fmla = FormulaProp('forall x B1(x) and (A imp B)')\n",
-    "fmla.verified_by(RuleInfer.AND_INTRO, [node1, node2])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n",
-      "True\n"
-     ]
-    }
-   ],
-   "source": [
-    "node1 = parse_ast('forall x B1(x) and (A imp B)')\n",
-    "fmla1 = FormulaProp('A imp B')\n",
-    "fmla2 = FormulaProp('forall x B1(x)')\n",
-    "print(fmla1.verified_by(RuleInfer.AND_ELIM, [node1]))\n",
-    "print(fmla2.verified_by(RuleInfer.AND_ELIM, [node1]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n",
-      "True\n"
-     ]
-    }
-   ],
-   "source": [
-    "node1 = parse_ast('A')\n",
-    "node2 = parse_ast('B')\n",
-    "fmla = FormulaProp('A or B')\n",
-    "print(fmla.verified_by(RuleInfer.OR_INTRO, [node1]))\n",
-    "print(fmla.verified_by(RuleInfer.OR_INTRO, [node2]))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n",
-      "True\n"
-     ]
-    }
-   ],
-   "source": [
-    "node1 = parse_ast('A or B')\n",
-    "node2 = parse_ast('A imp C')\n",
-    "node3 = parse_ast('B imp C')\n",
-    "fmla = FormulaProp('C')\n",
-    "print(fmla.verified_by(RuleInfer.OR_ELIM, [node1, node2, node3]))\n",
-    "print(fmla.verified_by(RuleInfer.OR_ELIM, [node1, node3, node2]))\n",
-    "print(fmla.verified_by(RuleInfer.OR_ELIM, [node2, node1, node3]))\n",
-    "print(fmla.verified_by(RuleInfer.OR_ELIM, [node2, node3, node1]))\n",
-    "print(fmla.verified_by(RuleInfer.OR_ELIM, [node3, node1, node2]))\n",
-    "print(fmla.verified_by(RuleInfer.OR_ELIM, [node3, node2, node1]))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n"
-     ]
-    }
-   ],
-   "source": [
-    "node1 = parse_ast('A imp B')\n",
-    "fmla = FormulaProp('A imp B')\n",
-    "print(fmla.verified_by(RuleInfer.IMP_INTRO, [node1]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -793,106 +546,124 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True\n"
+      "│1. A imp B\t .hyp \n",
+      "├─\n",
+      "││2. A or C\t .hyp \n",
+      "│├─\n",
+      "│││3. A\t .hyp \n",
+      "││├─\n",
+      "│││4. B\t .imp elim 1,3\n",
+      "│││5. B or C\t .and intro 4\n",
+      "│││6. C\t .hyp \n",
+      "││├─\n",
+      "│││7. B or C\t .or intro 6\n",
+      "││8. B or C\t .or elim 2,3-5,6-7\n",
+      "│9. A or C imp B or C\t .imp intro 2-8\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "fmla = FormulaProp('not C_1 iff B1(x)')\n",
-    "node1 = parse_ast('not C_1 imp B1(x)')\n",
-    "node2 = parse_ast('B1(x) imp not C_1')\n",
-    "print(fmla.verified_by(RuleInfer.IFF_INTRO, [node1, node2]))"
+    "# A imp B proves A or C imp B or C\n",
+    "prf_str = '''\n",
+    "1. A imp B .hyp\n",
+    "proves\n",
+    "  2. A or C .hyp\n",
+    "  proves\n",
+    "    3. A .hyp\n",
+    "    proves\n",
+    "    4. B .imp elim 1,3\n",
+    "    5. B or C .and intro 4\n",
+    "    6. C .hyp\n",
+    "    proves\n",
+    "    7. B or C .or intro 6\n",
+    "  8. B or C .or elim 2,3-5,6-7\n",
+    "9. A or C imp B or C .imp intro 2-8\n",
+    "'''\n",
+    "print(proof := parse_fitch(prf_str))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n"
-     ]
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "fmla = FormulaProp('B1(x)')\n",
-    "node2 = parse_ast('not C_1 iff B1(x)')\n",
-    "node1 = parse_ast('not C_1')\n",
-    "print(fmla.verified_by(RuleInfer.IFF_ELIM, [node1, node2]))\n"
+    "proof.verified_by(\"4\", RuleInfer.IMP_ELIM, [\"1\", \"3\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True\n"
+      "1: A imp B is hyp\n",
+      "2: A or C is hyp\n",
+      "3: A is hyp\n",
+      "4: B is verified\n",
+      "5: B or C is *not* verified\n",
+      "6: C is hyp\n",
+      "7: B or C is verified\n",
+      "8: B or C is verified\n",
+      "9: A or C imp B or C is verified\n"
      ]
     }
    ],
    "source": [
-    "fmla = FormulaProp('not C_1')\n",
-    "node2 = parse_ast('not C_1 iff B1(x)')\n",
-    "node1 = parse_ast('B1(x)')\n",
-    "print(fmla.verified_by(RuleInfer.IFF_ELIM, [node1, node2]))\n"
+    "for node_code in proof.index_dict: # type: ignore\n",
+    "  if bSubproof(node_code):\n",
+    "    continue\n",
+    "  p_node = proof.get_p_node(node_code)\n",
+    "  if (label := p_node.label).type == 'formula':\n",
+    "    if label.is_hyp:\n",
+    "      print(f\"{node_code}: {label.formula} is hyp\")\n",
+    "    else:\n",
+    "      if proof.verified(node_code):\n",
+    "        print(f\"{node_code}: {label.formula} is verified\")\n",
+    "      else:\n",
+    "        print(f\"{node_code}: {label.formula} is *not* verified\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n"
-     ]
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "node1 = parse_ast('A or B')\n",
-    "fmla = FormulaProp('A or B')\n",
-    "print(fmla.verified_by(RuleInfer.REPEAT, [node1]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n",
-      "False\n",
-      "True\n",
-      "True\n"
-     ]
-    }
-   ],
-   "source": [
-    "fmla1 = FormulaProp('not not A_1 or not A_1')\n",
-    "fmla2 = FormulaProp('A_1')\n",
-    "print(fmla1.verified_by(RuleInfer.LEM))\n",
-    "print(fmla2.verified_by(RuleInfer.LEM))\n",
-    "print(fmla1.verified_by(RuleInfer.HYP))\n",
-    "print(fmla1.verified_by(RuleInfer.HYP))"
+    "proof.verified_all()"
    ]
   }
  ],
