--- a/proofs/propositional.ipynb
+++ b/proofs/propositional.ipynb
@@ -373,31 +373,45 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "│1. A imp B\t .hyp \n",
-      "│2. B imp C\t .hyp \n",
+      "│1. # comment at the 1st line\n",
+      "│2. A imp B\t .hyp \n",
+      "│3. B imp C\t .hyp \n",
+      "│4. # next line is blank\n",
+      "│5. \n",
       "├─\n",
-      "││3. A\t .hyp \n",
+      "││6. A\t .hyp \n",
+      "││7. # comment above 'proves'\n",
       "│├─\n",
-      "││4. B\t .imp elim 1,3\n",
-      "││5. C\t .imp elim 2,4\n",
-      "│6. A imp C\t .imp intro 3-5\n",
+      "││8. # comment below 'proves'\n",
+      "││9. B\t .imp elim 2,6\n",
+      "││10. # blank line with indentation can be problematic\n",
+      "││11. \n",
+      "││12. C\t .imp elim 3,9\n",
+      "│13. A imp C\t .imp intro 6-12\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "# Another test for the parser.\n",
+    "# Test for comments and blank lines\n",
     "prf_str = '''\n",
-    "1. A imp B .hyp\n",
-    "2. B imp C .hyp\n",
+    "# comment at the 1st line\n",
+    "A imp B\t .hyp\n",
+    "B imp C\t .hyp\n",
+    "# next line is blank\n",
+    "\n",
     "proves\n",
-    "  3. A .hyp\n",
+    "  A\t .hyp\n",
+    "  # comment above 'proves'\n",
     "  proves\n",
-    "  4. B     .imp elim 1,3\n",
-    "  5. C     .imp elim 2,4\n",
-    "6. A imp C .imp intro 3-5\n",
-    "'''\n",
-    "print(proof := parse_fitch(prf_str))"
+    "  # comment below 'proves'\n",
+    "  B\t .imp elim 2,6\n",
+    "  # blank line with indentation can be problematic\n",
+    "  \n",
+    "  C\t .imp elim 3,9\n",
+    "A imp C\t .imp intro 6-12'''\n",
+    "proof = parse_fitch(prf_str)\n",
+    "print(proof)"
    ]
   },
   {
@@ -522,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -546,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -572,6 +586,7 @@
    ],
    "source": [
     "# A imp B proves A or C imp B or C\n",
+    "# annotation for line 5 is intentionally wrong\n",
     "prf_str = '''\n",
     "1. A imp B .hyp\n",
     "proves\n",
@@ -592,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -601,7 +616,7 @@
        "True"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -612,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -648,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -657,12 +672,72 @@
        "False"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "proof.verified_all()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "│1. # comment at the 1st line\n",
+      "│2. A imp B\t .hyp \n",
+      "│3. B imp C\t .hyp \n",
+      "│4. # next line is blank\n",
+      "│5. \n",
+      "├─\n",
+      "││6. A\t .hyp \n",
+      "││7. # comment above 'proves'\n",
+      "│├─\n",
+      "││8. # comment below 'proves'\n",
+      "││9. B\t .imp elim 2,6\n",
+      "││10. # blank line with indentation can be problematic\n",
+      "││11. \n",
+      "││12. C\t .imp elim 3,9\n",
+      "│13. A imp C\t .imp intro 6-12\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Test for comments and blank lines\n",
+    "prf_str = '''\n",
+    "1. # comment at the 1st line\n",
+    "2. A imp B\t .hyp\n",
+    "3. B imp C\t .hyp\n",
+    "4. # next line is blank\n",
+    "5. \n",
+    "proves\n",
+    "  6. A\t .hyp\n",
+    "  7. # comment above 'proves'\n",
+    "  proves\n",
+    "  8. # comment below 'proves'\n",
+    "  9. B\t .imp elim 2,6\n",
+    "  10. # blank line with indentation can be problematic\n",
+    "  11.  \n",
+    "  12. C\t .imp elim 3,9\n",
+    "13. A imp C\t .imp intro 6-12'''\n",
+    "print(proof := parse_fitch(prf_str))\n",
     "proof.verified_all()"
    ]
   }
