--- a/proofs/propositional.ipynb
+++ b/proofs/propositional.ipynb
@@ -297,7 +297,7 @@
       "{{\n",
       "  A or C .hyp\n",
       "  {{\n",
-      "    A .hyp   \n",
+      "    A .hyp\n",
       "    B .imp elim 1,3\n",
       "    B or C .or intro 4\n",
       "  }}\n",
@@ -339,6 +339,38 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# A buggy example.\n",
+    "# To reveal the bug, uncomment the last 2 lines\n",
+    "# and run the cell.\n",
+    "\n",
+    "prf_str = '''\n",
+    "1. A imp B\t .hyp\n",
+    "2.\n",
+    "proves\n",
+    "  3. # subproof may start with a comment\n",
+    "  4. A or C\t .hyp \n",
+    "  proves\n",
+    "  5. A\t .hyp \n",
+    "  proves\n",
+    "  6. B\t .imp elim 1,5\n",
+    "  7. B or C\t .and intro 6\n",
+    "  8. C\t .hyp \n",
+    "  proves\n",
+    "  9. B or C\t .or intro 8\n",
+    "  10. # end of subproof\n",
+    "  11. B or C\t .or elim 3,5-7,8-10\n",
+    "12. A or C imp B or C\t .imp intro 3-11\n",
+    "'''\n",
+    "# lines = get_str_li(prf_str, tabsize=2)\n",
+    "# print_lines(lines) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -353,7 +385,7 @@
     }
    ],
    "source": [
-    "# This is a test for the parser.\n",
+    "# This is the first test for the parser.\n",
     "prf_str = '''\n",
     "1. A .hyp\n",
     "2. B  .hyp\n",
@@ -366,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +416,7 @@
       "│├─\n",
       "││8. # comment below 'proves'\n",
       "││9. B\t .imp elim 2,6\n",
-      "││10. # blank line with indentation can be problematic\n",
+      "││10. # Blank line with indentation is allowed.\n",
       "││11. \n",
       "││12. C\t .imp elim 3,9\n",
       "│13. A imp C\t .imp intro 6-12\n",
@@ -406,7 +438,7 @@
     "  proves\n",
     "  # comment below 'proves'\n",
     "  B\t .imp elim 2,6\n",
-    "  # blank line with indentation can be problematic\n",
+    "  # Blank line with indentation is allowed.\n",
     "  \n",
     "  C\t .imp elim 3,9\n",
     "A imp C\t .imp intro 6-12'''\n",
@@ -416,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -466,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -490,13 +522,15 @@
     }
    ],
    "source": [
+    "# proof.index_dict is a dictionary that maps line numbers \n",
+    "# to indices.\n",
     "index_dict = proof.build_index_dict()\n",
     "pprint(index_dict, sort_dicts=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -524,6 +558,7 @@
     }
    ],
    "source": [
+    "# The order relation between nodes.\n",
     "# proof := parse_fitch(prf_str)\n",
     "# index_dict = proof.build_index_dict()\n",
     "for i in index_dict:\n",
@@ -531,12 +566,12 @@
     "    label_j = proof.get_p_node(j).label\n",
     "    if label_j.type == 'formula' and not label_j.is_hyp: # conclusion\n",
     "      if proof.is_earlier(i, j):\n",
-    "        print(f\"{i} <= {j}\") \n"
+    "        print(f\"{i} <= {j}\") "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -550,6 +585,8 @@
     }
    ],
    "source": [
+    "# FormulaProp.verified_by()\n",
+    "\n",
     "fmla = FormulaProp('B1(x)')\n",
     "node1 = parse_ast('(A iff not C_1) imp B1(x)')\n",
     "node2 = parse_ast('A iff not C_1')\n",
@@ -560,31 +597,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "│1. A imp B\t .hyp \n",
-      "├─\n",
-      "││2. A or C\t .hyp \n",
-      "│├─\n",
-      "│││3. A\t .hyp \n",
-      "││├─\n",
-      "│││4. B\t .imp elim 1,3\n",
-      "│││5. B or C\t .and intro 4\n",
-      "│││6. C\t .hyp \n",
-      "││├─\n",
-      "│││7. B or C\t .or intro 6\n",
-      "││8. B or C\t .or elim 2,3-5,6-7\n",
-      "│9. A or C imp B or C\t .imp intro 2-8\n",
-      "\n"
+      "True\n",
+      "False\n"
      ]
     }
    ],
    "source": [
+    "# FormulaProp.verified()\n",
+    "\n",
     "# A imp B proves A or C imp B or C\n",
     "# annotation for line 5 is intentionally wrong\n",
     "prf_str = '''\n",
@@ -602,27 +629,9 @@
     "  8. B or C .or elim 2,3-5,6-7\n",
     "9. A or C imp B or C .imp intro 2-8\n",
     "'''\n",
-    "print(proof := parse_fitch(prf_str))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "proof.verified_by(\"4\", RuleInfer.IMP_ELIM, [\"1\", \"3\"])"
+    "proof = parse_fitch(prf_str)\n",
+    "print(proof.verified(\"4\"))\n",
+    "print(proof.verified(\"5\"))"
    ]
   },
   {
@@ -631,34 +640,20 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1: A imp B is hyp\n",
-      "2: A or C is hyp\n",
-      "3: A is hyp\n",
-      "4: B is verified\n",
-      "5: B or C is *not* verified\n",
-      "6: C is hyp\n",
-      "7: B or C is verified\n",
-      "8: B or C is verified\n",
-      "9: A or C imp B or C is verified\n"
-     ]
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "for node_code in proof.index_dict: # type: ignore\n",
-    "  if bSubproof(node_code):\n",
-    "    continue\n",
-    "  p_node = proof.get_p_node(node_code)\n",
-    "  if (label := p_node.label).type == 'formula':\n",
-    "    if label.is_hyp:\n",
-    "      print(f\"{node_code}: {label.formula} is hyp\")\n",
-    "    else:\n",
-    "      if proof.verified(node_code):\n",
-    "        print(f\"{node_code}: {label.formula} is verified\")\n",
-    "      else:\n",
-    "        print(f\"{node_code}: {label.formula} is *not* verified\")\n"
+    "proof.verified_all()\n",
+    "#^ This gives false because there is a line with wrong \n",
+    "# annotation: namely, line 5."
    ]
   },
   {
@@ -667,18 +662,52 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "│1. A imp B\t .hyp \n",
+      "│2. \n",
+      "├─\n",
+      "││3. # subproof may start with a comment\n",
+      "││4. A or C\t .hyp \n",
+      "│├─\n",
+      "│││5. A\t .hyp \n",
+      "││├─\n",
+      "│││6. B\t .imp elim 1,5\n",
+      "│││7. B or C\t .and intro 6\n",
+      "│││8. C\t .hyp \n",
+      "││├─\n",
+      "│││9. B or C\t .or intro 8\n",
+      "│││10. # end of subproof\n",
+      "││11. B or C\t .or elim 3,5-7,8-10\n",
+      "│12. A or C imp B or C\t .imp intro 3-11\n",
+      "\n"
+     ]
     }
    ],
    "source": [
-    "proof.verified_all()"
+    "# The following gives the same result as print(proof).\n",
+    "# Test for latex output.\n",
+    "prf_str = '''\n",
+    "1. A imp B\t .hyp\n",
+    "2.\n",
+    "proves\n",
+    "  3. # subproof may start with a comment\n",
+    "  4. A or C\t .hyp \n",
+    "  proves\n",
+    "    5. A\t .hyp \n",
+    "    proves\n",
+    "    6. B\t .imp elim 1,5\n",
+    "    7. B or C\t .and intro 6\n",
+    "    8. C\t .hyp \n",
+    "    proves\n",
+    "    9. B or C\t .or intro 8\n",
+    "    10. # end of subproof\n",
+    "  11. B or C\t .or elim 3,5-7,8-10\n",
+    "12. A or C imp B or C\t .imp intro 3-11\n",
+    "'''\n",
+    "proof = parse_fitch(prf_str)\n",
+    "proof.show_fitch_text()"
    ]
   },
   {
@@ -690,55 +719,117 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "│1. # comment at the 1st line\n",
-      "│2. A imp B\t .hyp \n",
-      "│3. B imp C\t .hyp \n",
-      "│4. # next line is blank\n",
-      "│5. \n",
+      "│1. A imp B\t .hyp \n",
+      "│2. \n",
       "├─\n",
-      "││6. A\t .hyp \n",
-      "││7. # comment above 'proves'\n",
+      "││3. # subproof may start with a comment\n",
+      "││4. A or C\t .hyp \n",
       "│├─\n",
-      "││8. # comment below 'proves'\n",
-      "││9. B\t .imp elim 2,6\n",
-      "││10. # blank line with indentation can be problematic\n",
-      "││11. \n",
-      "││12. C\t .imp elim 3,9\n",
-      "│13. A imp C\t .imp intro 6-12\n",
+      "│││5. A\t .hyp \n",
+      "││├─\n",
+      "│││6. B\t \u001b[92m✓\u001b[39m imp elim 1,5\n",
+      "│││7. B or C\t \u001b[91mx\u001b[39m and intro 6\n",
+      "│││8. C\t .hyp \n",
+      "││├─\n",
+      "│││9. B or C\t \u001b[92m✓\u001b[39m or intro 8\n",
+      "│││10. # end of subproof\n",
+      "││11. B or C\t \u001b[91mx\u001b[39m or elim 3,5-7,8-10\n",
+      "│12. A or C imp B or C\t \u001b[92m✓\u001b[39m imp intro 3-11\n",
       "\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Test for comments and blank lines\n",
-    "prf_str = '''\n",
-    "1. # comment at the 1st line\n",
-    "2. A imp B\t .hyp\n",
-    "3. B imp C\t .hyp\n",
-    "4. # next line is blank\n",
-    "5. \n",
-    "proves\n",
-    "  6. A\t .hyp\n",
-    "  7. # comment above 'proves'\n",
-    "  proves\n",
-    "  8. # comment below 'proves'\n",
-    "  9. B\t .imp elim 2,6\n",
-    "  10. # blank line with indentation can be problematic\n",
-    "  11.  \n",
-    "  12. C\t .imp elim 3,9\n",
-    "13. A imp C\t .imp intro 6-12'''\n",
-    "print(proof := parse_fitch(prf_str))\n",
-    "proof.verified_all()"
+    "# The following shows the proof with validation result.\n",
+    "proof.show_fitch_text(True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "% \\usepackage{proofmood_en}\n",
+      "\\begin{fitchproof}\n",
+      "& \\pmvert \\pnumb{1} \\pform{A \\rightarrow B} & \\chknull & \\infrul{hyp} & \\pmnl\n",
+      "& \\multicolumn{3}{l}{\\pmvert \\pnumb{2} \\infrul{}} & \\pmnl\n",
+      "& \\pmproves & & & \\\\\n",
+      "& \\multicolumn{3}{l}{\\pmvert \\pmvert \\pnumb{3} \\infrul{\\#\\; subproof\\; may\\; start\\; with\\; a\\; comment}} & \\pmnl\n",
+      "& \\pmvert \\pmvert \\pnumb{4} \\pform{A \\vee C} & \\chknull & \\infrul{hyp} & \\pmnl\n",
+      "& \\pmvert \\pmproves & & & \\\\\n",
+      "& \\pmvert \\pmvert \\pmvert \\pnumb{5} \\pform{A} & \\chknull & \\infrul{hyp} & \\pmnl\n",
+      "& \\pmvert \\pmvert \\pmproves & & & \\\\\n",
+      "& \\pmvert \\pmvert \\pmvert \\pnumb{6} \\pform{B} & \\chknull & \\infrule{\\rightarrow}{elim}& \\pmprem{1,5} \\pmnl\n",
+      "& \\pmvert \\pmvert \\pmvert \\pnumb{7} \\pform{B \\vee C} & \\chknull &  \\infruleErr{and\\; intro\\; 6} & \\pmnl\n",
+      "& \\pmvert \\pmvert & & & \\\\\n",
+      "& \\pmvert \\pmvert \\pmvert \\pnumb{8} \\pform{C} & \\chknull & \\infrul{hyp} & \\pmnl\n",
+      "& \\pmvert \\pmvert \\pmproves & & & \\\\\n",
+      "& \\pmvert \\pmvert \\pmvert \\pnumb{9} \\pform{B \\vee C} & \\chknull & \\infrule{\\vee}{intro}& \\pmprem{8} \\pmnl\n",
+      "& \\multicolumn{3}{l}{\\pmvert \\pmvert \\pmvert \\pnumb{10} \\infrul{\\#\\; end\\; of\\; subproof}} & \\pmnl\n",
+      "& \\pmvert \\pmvert & & & \\\\\n",
+      "& \\pmvert \\pmvert \\pnumb{11} \\pform{B \\vee C} & \\chknull & \\infrule{\\vee}{elim}& \\pmprem{3,5-7,8-10} \\pmnl\n",
+      "& \\pmvert & & & \\\\\n",
+      "& \\pmvert \\pnumb{12} \\pform{A \\vee C \\rightarrow B \\vee C} & \\chknull & \\infrule{\\rightarrow}{intro}& \\pmprem{3-11} \\pmnl\n",
+      "\\end{fitchproof}\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# The following shows the LaTeX source of the proof\n",
+    "# without validation result.\n",
+    "# The LaTeX source can be compiled with\n",
+    "# \\usepackage{proofmood_en}\n",
+    "\n",
+    "latex_str = proof.build_fitch_latex()\n",
+    "print(latex_str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "% \\usepackage{proofmood_en}\n",
+      "\\begin{fitchproof}\n",
+      "& \\pmvert \\pnumb{1} \\pform{A \\rightarrow B} & \\chknull & \\infrul{hyp} & \\pmnl\n",
+      "& \\multicolumn{3}{l}{\\pmvert \\pnumb{2} \\infrul{}} & \\pmnl\n",
+      "& \\pmproves & & & \\\\\n",
+      "& \\multicolumn{3}{l}{\\pmvert \\pmvert \\pnumb{3} \\infrul{\\#\\; subproof\\; may\\; start\\; with\\; a\\; comment}} & \\pmnl\n",
+      "& \\pmvert \\pmvert \\pnumb{4} \\pform{A \\vee C} & \\chknull & \\infrul{hyp} & \\pmnl\n",
+      "& \\pmvert \\pmproves & & & \\\\\n",
+      "& \\pmvert \\pmvert \\pmvert \\pnumb{5} \\pform{A} & \\chknull & \\infrul{hyp} & \\pmnl\n",
+      "& \\pmvert \\pmvert \\pmproves & & & \\\\\n",
+      "& \\pmvert \\pmvert \\pmvert \\pnumb{6} \\pform{B} & \\chkch & \\infrule{\\rightarrow}{elim}& \\pmprem{1,5} \\pmnl\n",
+      "& \\pmvert \\pmvert \\pmvert \\pnumb{7} \\pform{B \\vee C} & \\chkx &  \\infruleErr{and\\; intro\\; 6} & \\pmnl\n",
+      "& \\pmvert \\pmvert & & & \\\\\n",
+      "& \\pmvert \\pmvert \\pmvert \\pnumb{8} \\pform{C} & \\chknull & \\infrul{hyp} & \\pmnl\n",
+      "& \\pmvert \\pmvert \\pmproves & & & \\\\\n",
+      "& \\pmvert \\pmvert \\pmvert \\pnumb{9} \\pform{B \\vee C} & \\chkch & \\infrule{\\vee}{intro}& \\pmprem{8} \\pmnl\n",
+      "& \\multicolumn{3}{l}{\\pmvert \\pmvert \\pmvert \\pnumb{10} \\infrul{\\#\\; end\\; of\\; subproof}} & \\pmnl\n",
+      "& \\pmvert \\pmvert & & & \\\\\n",
+      "& \\pmvert \\pmvert \\pnumb{11} \\pform{B \\vee C} & \\chkx & \\infrule{\\vee}{elim}& \\pmprem{3,5-7,8-10} \\pmnl\n",
+      "& \\pmvert & & & \\\\\n",
+      "& \\pmvert \\pnumb{12} \\pform{A \\vee C \\rightarrow B \\vee C} & \\chkch & \\infrule{\\rightarrow}{intro}& \\pmprem{3-11} \\pmnl\n",
+      "\\end{fitchproof}\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# The following shows the LaTeX source of the proof\n",
+    "# without validation result.\n",
+    "\n",
+    "latex_str = proof.build_fitch_latex(True)\n",
+    "print(latex_str)"
    ]
   }
  ],
