--- a/proofs/fitch_prop.ipynb
+++ b/proofs/fitch_prop.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from propositional import *\n",
+    "from fitch_prop import *\n",
     "from pprint import pprint"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -337,13 +337,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "get_str_li(): same level and right_after_proves, but is_hyp\n",
+      "\tPerhaps you should indent the following line:\n",
+      "\t5. A\t .hyp\n"
+     ]
+    }
+   ],
    "source": [
     "# A buggy example.\n",
-    "# To reveal the bug, uncomment the last 2 lines\n",
-    "# and run the cell.\n",
     "\n",
     "prf_str = '''\n",
     "1. A imp B\t .hyp\n",
@@ -363,13 +371,16 @@
     "  11. B or C\t .or elim 3,5-7,8-10\n",
     "12. A or C imp B or C\t .imp intro 3-11\n",
     "'''\n",
-    "# lines = get_str_li(prf_str, tabsize=2)\n",
-    "# print_lines(lines) "
+    "try:\n",
+    "  lines = get_str_li(prf_str, tabsize=2)\n",
+    "  print_lines(lines) \n",
+    "except Exception as e:\n",
+    "  print(e)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -379,18 +390,20 @@
       "│1. A\t .hyp \n",
       "│2. B\t .hyp \n",
       "├─\n",
-      "│3. A and B\t .and intro\n",
+      "│3. A and B\t .and intro 1,2\n",
       "\n"
      ]
     }
    ],
    "source": [
     "# This is the first test for the parser.\n",
+    "# Validation is done too within the parser.\n",
+    "# Note that we omitted the line numbers and it still works.\n",
     "prf_str = '''\n",
-    "1. A .hyp\n",
-    "2. B  .hyp\n",
+    "A .hyp\n",
+    "B  .hyp\n",
     "proves\n",
-    "3. A and B .and intro\n",
+    "A and B .and intro 1,2\n",
     "'''\n",
     "proof = parse_fitch(prf_str)\n",
     "print(proof)"
@@ -398,57 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "│1. # comment at the 1st line\n",
-      "│2. A imp B\t .hyp \n",
-      "│3. B imp C\t .hyp \n",
-      "│4. # next line is blank\n",
-      "│5. \n",
-      "├─\n",
-      "││6. A\t .hyp \n",
-      "││7. # comment above 'proves'\n",
-      "│├─\n",
-      "││8. # comment below 'proves'\n",
-      "││9. B\t .imp elim 2,6\n",
-      "││10. # Blank line with indentation is allowed.\n",
-      "││11. \n",
-      "││12. C\t .imp elim 3,9\n",
-      "│13. A imp C\t .imp intro 6-12\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Test for comments and blank lines\n",
-    "prf_str = '''\n",
-    "# comment at the 1st line\n",
-    "A imp B\t .hyp\n",
-    "B imp C\t .hyp\n",
-    "# next line is blank\n",
-    "\n",
-    "proves\n",
-    "  A\t .hyp\n",
-    "  # comment above 'proves'\n",
-    "  proves\n",
-    "  # comment below 'proves'\n",
-    "  B\t .imp elim 2,6\n",
-    "  # Blank line with indentation is allowed.\n",
-    "  \n",
-    "  C\t .imp elim 3,9\n",
-    "A imp C\t .imp intro 6-12'''\n",
-    "proof = parse_fitch(prf_str)\n",
-    "print(proof)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -468,16 +431,25 @@
       "│││7. B or C\t .or intro 6\n",
       "││8. B or C\t .or elim 2,3-5,6-7\n",
       "│9. A or C imp B or C\t .imp intro 2-8\n",
-      "\n"
+      "\n",
+      "│1. A imp B\t .hyp \n",
+      "├─\n",
+      "││2. A or C\t .hyp \n",
+      "│├─\n",
+      "│││3. A\t .hyp \n",
+      "││├─\n",
+      "│││4. B\t\u001b[92m✓\u001b[39m imp elim 1,3\n",
+      "│││5. B or C\t\u001b[92m✓\u001b[39m or intro 4\n",
+      "│││6. C\t .hyp \n",
+      "││├─\n",
+      "│││7. B or C\t\u001b[92m✓\u001b[39m or intro 6\n",
+      "││8. B or C\t\u001b[92m✓\u001b[39m or elim 2,3-5,6-7\n",
+      "│9. A or C imp B or C\t\u001b[92m✓\u001b[39m imp intro 2-8\n"
      ]
     }
    ],
    "source": [
-    "# Another test for the parser.\n",
-    "# Note that the parser can handle the case where\n",
-    "# two subproofs at the same level are adjacent.\n",
-    "# It is a little hard to see that line 6 starts a new subproof.\n",
-    "# This will be solved by the LaTeX output later.\n",
+    "# Show validation result.\n",
     "prf_str = '''\n",
     "1. A imp B .hyp\n",
     "proves\n",
@@ -485,7 +457,7 @@
     "  proves\n",
     "    3. A .hyp\n",
     "    proves\n",
-    "    4. B .imp elim 1,3\n",
+    "    4. B      .imp  elim   1,3\n",
     "    5. B or C .or intro 4\n",
     "    6. C .hyp\n",
     "    proves\n",
@@ -493,31 +465,150 @@
     "  8. B or C .or elim 2,3-5,6-7\n",
     "9. A or C imp B or C .imp intro 2-8\n",
     "'''\n",
-    "print(proof := parse_fitch(prf_str))"
+    "proof = parse_fitch(prf_str)\n",
+    "proof.show_fitch_text(False) # False means no validation\n",
+    "proof.show_fitch_text(True) # True means validation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'1-9': [0],\n",
+      "% \\usepackage{proofmood}\n",
+      "\\begin{fitchproof}\n",
+      "& \\pmvert \\pnumb{1} \\pform{A \\rightarrow B} & \\chknull & \\infrul{hyp} & \\pmnl\n",
+      "& \\pmproves & & & \\\\\n",
+      "& \\pmvert \\pmvert \\pnumb{2} \\pform{A \\vee C} & \\chknull & \\infrul{hyp} & \\pmnl\n",
+      "& \\pmvert \\pmproves & & & \\\\\n",
+      "& \\pmvert \\pmvert \\pmvert \\pnumb{3} \\pform{A} & \\chknull & \\infrul{hyp} & \\pmnl\n",
+      "& \\pmvert \\pmvert \\pmproves & & & \\\\\n",
+      "& \\pmvert \\pmvert \\pmvert \\pnumb{4} \\pform{B} & \\chkch & \\infrule{\\rightarrow}{elim}& \\pmprem{1,3} \\pmnl\n",
+      "& \\pmvert \\pmvert \\pmvert \\pnumb{5} \\pform{B \\vee C} & \\chkch & \\infrule{\\vee}{intro}& \\pmprem{4} \\pmnl\n",
+      "& \\pmvert \\pmvert & & & \\\\\n",
+      "& \\pmvert \\pmvert \\pmvert \\pnumb{6} \\pform{C} & \\chknull & \\infrul{hyp} & \\pmnl\n",
+      "& \\pmvert \\pmvert \\pmproves & & & \\\\\n",
+      "& \\pmvert \\pmvert \\pmvert \\pnumb{7} \\pform{B \\vee C} & \\chkch & \\infrule{\\vee}{intro}& \\pmprem{6} \\pmnl\n",
+      "& \\pmvert \\pmvert & & & \\\\\n",
+      "& \\pmvert \\pmvert \\pnumb{8} \\pform{B \\vee C} & \\chkch & \\infrule{\\vee}{elim}& \\pmprem{2,3-5,6-7} \\pmnl\n",
+      "& \\pmvert & & & \\\\\n",
+      "& \\pmvert \\pnumb{9} \\pform{A \\vee C \\rightarrow B \\vee C} & \\chkch & \\infrule{\\rightarrow}{intro}& \\pmprem{2-8} \\pmnl\n",
+      "\\end{fitchproof}\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# LaTeX output\n",
+    "print(proof.build_fitch_latex(1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "│1. A imp B\t .hyp \n",
+      "├─\n",
+      "││2. A or C\t .hyp \n",
+      "│├─\n",
+      "│││3. # comment in hypothesis\n",
+      "│││4. A\t .hyp \n",
+      "││├─\n",
+      "│││5. B\t .imp elim 1,4\n",
+      "│││6. # below is a blank line\n",
+      "│││7. \n",
+      "│││8. B or C\t .and intro 5\n",
+      "│││9. C\t .hyp \n",
+      "││├─\n",
+      "│││10. B or C\t .or intro 1\n",
+      "││11. B or C\t .or elim 2,3-8,9-10\n",
+      "│12. A or C imp B or C\t .imp intro 2-11\n",
+      "\n",
+      "│1. A imp B\t .hyp \n",
+      "├─\n",
+      "││2. A or C\t .hyp \n",
+      "│├─\n",
+      "│││3. # comment in hypothesis\n",
+      "│││4. A\t .hyp \n",
+      "││├─\n",
+      "│││5. B\t\u001b[92m✓\u001b[39m imp elim 1,4\n",
+      "│││6. # below is a blank line\n",
+      "│││7. \n",
+      "│││8. B or C\t\u001b[91mx and intro 5\u001b[39m\n",
+      "│││9. C\t .hyp \n",
+      "││├─\n",
+      "│││10. B or C\t\u001b[91mx\u001b[39m or intro 1\n",
+      "││11. B or C\t\u001b[92m✓\u001b[39m or elim 2,3-8,9-10\n",
+      "│12. A or C imp B or C\t\u001b[92m✓\u001b[39m imp intro 2-11\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Show validation result.\n",
+    "# Added some comments and blank lines to the above proof.\n",
+    "# Gave wrong annotation to some lines intentionally.\n",
+    "prf_str = '''\n",
+    "1. A imp B .hyp\n",
+    "proves\n",
+    "  2. A or C .hyp\n",
+    "  proves\n",
+    "    3. # comment in hypothesis\n",
+    "    4. A .hyp\n",
+    "    proves\n",
+    "    5. B      .imp  elim   1,4\n",
+    "    6. # below is a blank line\n",
+    "    7. \n",
+    "    8. B or C .and intro 5\n",
+    "    9. C .hyp\n",
+    "    proves\n",
+    "    10. B or C .or intro 1\n",
+    "  11. B or C .or elim 2,3-8,9-10\n",
+    "12. A or C imp B or C .imp intro 2-11\n",
+    "'''\n",
+    "try:\n",
+    "  proof = parse_fitch(prf_str)\n",
+    "  proof.show_fitch_text()\n",
+    "  proof.show_fitch_text(True)\n",
+    "  print()\n",
+    "except Exception as e:\n",
+    "  print(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'1-12': [0],\n",
       " '1': [0, 0],\n",
-      " '2-8': [0, 1],\n",
+      " '2-11': [0, 1],\n",
       " '2': [0, 1, 0],\n",
-      " '3-5': [0, 1, 1],\n",
+      " '3-8': [0, 1, 1],\n",
       " '3': [0, 1, 1, 0],\n",
       " '4': [0, 1, 1, 1],\n",
       " '5': [0, 1, 1, 2],\n",
-      " '6-7': [0, 1, 2],\n",
-      " '6': [0, 1, 2, 0],\n",
-      " '7': [0, 1, 2, 1],\n",
-      " '8': [0, 1, 3],\n",
-      " '9': [0, 2]}\n"
+      " '6': [0, 1, 1, 3],\n",
+      " '7': [0, 1, 1, 4],\n",
+      " '8': [0, 1, 1, 5],\n",
+      " '9-10': [0, 1, 2],\n",
+      " '9': [0, 1, 2, 0],\n",
+      " '10': [0, 1, 2, 1],\n",
+      " '11': [0, 1, 3],\n",
+      " '12': [0, 2]}\n"
      ]
     }
    ],
@@ -530,30 +621,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 <= 4\n",
       "1 <= 5\n",
-      "1 <= 7\n",
       "1 <= 8\n",
-      "1 <= 9\n",
-      "2-8 <= 9\n",
-      "2 <= 4\n",
+      "1 <= 10\n",
+      "1 <= 11\n",
+      "1 <= 12\n",
+      "2-11 <= 12\n",
       "2 <= 5\n",
-      "2 <= 7\n",
       "2 <= 8\n",
-      "3-5 <= 7\n",
-      "3-5 <= 8\n",
-      "3 <= 4\n",
+      "2 <= 10\n",
+      "2 <= 11\n",
+      "3-8 <= 10\n",
+      "3-8 <= 11\n",
       "3 <= 5\n",
+      "3 <= 8\n",
       "4 <= 5\n",
-      "6-7 <= 8\n",
-      "6 <= 7\n"
+      "4 <= 8\n",
+      "5 <= 8\n",
+      "6 <= 8\n",
+      "7 <= 8\n",
+      "9-10 <= 11\n",
+      "9 <= 10\n"
      ]
     }
    ],
@@ -571,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -597,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -636,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -645,7 +740,7 @@
        "False"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -654,182 +749,6 @@
     "proof.verified_all()\n",
     "#^ This gives false because there is a line with wrong \n",
     "# annotation: namely, line 5."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "│1. A imp B\t .hyp \n",
-      "│2. \n",
-      "├─\n",
-      "││3. # subproof may start with a comment\n",
-      "││4. A or C\t .hyp \n",
-      "│├─\n",
-      "│││5. A\t .hyp \n",
-      "││├─\n",
-      "│││6. B\t .imp elim 1,5\n",
-      "│││7. B or C\t .and intro 6\n",
-      "│││8. C\t .hyp \n",
-      "││├─\n",
-      "│││9. B or C\t .or intro 8\n",
-      "│││10. # end of subproof\n",
-      "││11. B or C\t .or elim 3,5-7,8-10\n",
-      "│12. A or C imp B or C\t .imp intro 3-11\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "# The following gives the same result as print(proof).\n",
-    "# Test for latex output.\n",
-    "prf_str = '''\n",
-    "1. A imp B\t .hyp\n",
-    "2.\n",
-    "proves\n",
-    "  3. # subproof may start with a comment\n",
-    "  4. A or C\t .hyp \n",
-    "  proves\n",
-    "    5. A\t .hyp \n",
-    "    proves\n",
-    "    6. B\t .imp elim 1,5\n",
-    "    7. B or C\t .and intro 6\n",
-    "    8. C\t .hyp \n",
-    "    proves\n",
-    "    9. B or C\t .or intro 8\n",
-    "    10. # end of subproof\n",
-    "  11. B or C\t .or elim 3,5-7,8-10\n",
-    "12. A or C imp B or C\t .imp intro 3-11\n",
-    "'''\n",
-    "proof = parse_fitch(prf_str)\n",
-    "proof.show_fitch_text()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "│1. A imp B\t .hyp \n",
-      "│2. \n",
-      "├─\n",
-      "││3. # subproof may start with a comment\n",
-      "││4. A or C\t .hyp \n",
-      "│├─\n",
-      "│││5. A\t .hyp \n",
-      "││├─\n",
-      "│││6. B\t \u001b[92m✓\u001b[39m imp elim 1,5\n",
-      "│││7. B or C\t \u001b[91mx\u001b[39m and intro 6\n",
-      "│││8. C\t .hyp \n",
-      "││├─\n",
-      "│││9. B or C\t \u001b[92m✓\u001b[39m or intro 8\n",
-      "│││10. # end of subproof\n",
-      "││11. B or C\t \u001b[91mx\u001b[39m or elim 3,5-7,8-10\n",
-      "│12. A or C imp B or C\t \u001b[92m✓\u001b[39m imp intro 3-11\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "# The following shows the proof with validation result.\n",
-    "proof.show_fitch_text(True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "% \\usepackage{proofmood_en}\n",
-      "\\begin{fitchproof}\n",
-      "& \\pmvert \\pnumb{1} \\pform{A \\rightarrow B} & \\chknull & \\infrul{hyp} & \\pmnl\n",
-      "& \\multicolumn{3}{l}{\\pmvert \\pnumb{2} \\infrul{}} & \\pmnl\n",
-      "& \\pmproves & & & \\\\\n",
-      "& \\multicolumn{3}{l}{\\pmvert \\pmvert \\pnumb{3} \\infrul{\\#\\; subproof\\; may\\; start\\; with\\; a\\; comment}} & \\pmnl\n",
-      "& \\pmvert \\pmvert \\pnumb{4} \\pform{A \\vee C} & \\chknull & \\infrul{hyp} & \\pmnl\n",
-      "& \\pmvert \\pmproves & & & \\\\\n",
-      "& \\pmvert \\pmvert \\pmvert \\pnumb{5} \\pform{A} & \\chknull & \\infrul{hyp} & \\pmnl\n",
-      "& \\pmvert \\pmvert \\pmproves & & & \\\\\n",
-      "& \\pmvert \\pmvert \\pmvert \\pnumb{6} \\pform{B} & \\chknull & \\infrule{\\rightarrow}{elim}& \\pmprem{1,5} \\pmnl\n",
-      "& \\pmvert \\pmvert \\pmvert \\pnumb{7} \\pform{B \\vee C} & \\chknull &  \\infruleErr{and\\; intro\\; 6} & \\pmnl\n",
-      "& \\pmvert \\pmvert & & & \\\\\n",
-      "& \\pmvert \\pmvert \\pmvert \\pnumb{8} \\pform{C} & \\chknull & \\infrul{hyp} & \\pmnl\n",
-      "& \\pmvert \\pmvert \\pmproves & & & \\\\\n",
-      "& \\pmvert \\pmvert \\pmvert \\pnumb{9} \\pform{B \\vee C} & \\chknull & \\infrule{\\vee}{intro}& \\pmprem{8} \\pmnl\n",
-      "& \\multicolumn{3}{l}{\\pmvert \\pmvert \\pmvert \\pnumb{10} \\infrul{\\#\\; end\\; of\\; subproof}} & \\pmnl\n",
-      "& \\pmvert \\pmvert & & & \\\\\n",
-      "& \\pmvert \\pmvert \\pnumb{11} \\pform{B \\vee C} & \\chknull & \\infrule{\\vee}{elim}& \\pmprem{3,5-7,8-10} \\pmnl\n",
-      "& \\pmvert & & & \\\\\n",
-      "& \\pmvert \\pnumb{12} \\pform{A \\vee C \\rightarrow B \\vee C} & \\chknull & \\infrule{\\rightarrow}{intro}& \\pmprem{3-11} \\pmnl\n",
-      "\\end{fitchproof}\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "# The following shows the LaTeX source of the proof\n",
-    "# without validation result.\n",
-    "# The LaTeX source can be compiled with\n",
-    "# \\usepackage{proofmood_en}\n",
-    "\n",
-    "latex_str = proof.build_fitch_latex()\n",
-    "print(latex_str)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "% \\usepackage{proofmood_en}\n",
-      "\\begin{fitchproof}\n",
-      "& \\pmvert \\pnumb{1} \\pform{A \\rightarrow B} & \\chknull & \\infrul{hyp} & \\pmnl\n",
-      "& \\multicolumn{3}{l}{\\pmvert \\pnumb{2} \\infrul{}} & \\pmnl\n",
-      "& \\pmproves & & & \\\\\n",
-      "& \\multicolumn{3}{l}{\\pmvert \\pmvert \\pnumb{3} \\infrul{\\#\\; subproof\\; may\\; start\\; with\\; a\\; comment}} & \\pmnl\n",
-      "& \\pmvert \\pmvert \\pnumb{4} \\pform{A \\vee C} & \\chknull & \\infrul{hyp} & \\pmnl\n",
-      "& \\pmvert \\pmproves & & & \\\\\n",
-      "& \\pmvert \\pmvert \\pmvert \\pnumb{5} \\pform{A} & \\chknull & \\infrul{hyp} & \\pmnl\n",
-      "& \\pmvert \\pmvert \\pmproves & & & \\\\\n",
-      "& \\pmvert \\pmvert \\pmvert \\pnumb{6} \\pform{B} & \\chkch & \\infrule{\\rightarrow}{elim}& \\pmprem{1,5} \\pmnl\n",
-      "& \\pmvert \\pmvert \\pmvert \\pnumb{7} \\pform{B \\vee C} & \\chkx &  \\infruleErr{and\\; intro\\; 6} & \\pmnl\n",
-      "& \\pmvert \\pmvert & & & \\\\\n",
-      "& \\pmvert \\pmvert \\pmvert \\pnumb{8} \\pform{C} & \\chknull & \\infrul{hyp} & \\pmnl\n",
-      "& \\pmvert \\pmvert \\pmproves & & & \\\\\n",
-      "& \\pmvert \\pmvert \\pmvert \\pnumb{9} \\pform{B \\vee C} & \\chkch & \\infrule{\\vee}{intro}& \\pmprem{8} \\pmnl\n",
-      "& \\multicolumn{3}{l}{\\pmvert \\pmvert \\pmvert \\pnumb{10} \\infrul{\\#\\; end\\; of\\; subproof}} & \\pmnl\n",
-      "& \\pmvert \\pmvert & & & \\\\\n",
-      "& \\pmvert \\pmvert \\pnumb{11} \\pform{B \\vee C} & \\chkx & \\infrule{\\vee}{elim}& \\pmprem{3,5-7,8-10} \\pmnl\n",
-      "& \\pmvert & & & \\\\\n",
-      "& \\pmvert \\pnumb{12} \\pform{A \\vee C \\rightarrow B \\vee C} & \\chkch & \\infrule{\\rightarrow}{intro}& \\pmprem{3-11} \\pmnl\n",
-      "\\end{fitchproof}\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "# The following shows the LaTeX source of the proof\n",
-    "# without validation result.\n",
-    "\n",
-    "latex_str = proof.build_fitch_latex(True)\n",
-    "print(latex_str)"
    ]
   }
  ],
