Bug fix (import in imported .py)

--- a/proofs/fitch_prop.ipynb
+++ b/proofs/fitch_prop.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -43,9 +43,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "type: formula\n",
+      "line: A imp B .hyp\n",
+      "formula: A imp B\n",
+      "ann: hyp \n",
+      "is_hyp: True\n",
+      "\n",
+      "A imp B\t .hyp \n"
+     ]
+    }
+   ],
    "source": [
     "# Construct a NodeLabel object from a string.\n",
     "line = \"A imp B .hyp\"\n",
@@ -57,9 +71,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "│1. A imp B\t .hyp \n",
+      "│2. A\t .hyp \n",
+      "├─\n",
+      "│3. B\t .imp elim 1,2\n",
+      "│4. A\t .repeat 2\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Construct a ProofNode manually. (not by using the parser)\n",
     "line1 = \"A imp B .hyp\"\n",
@@ -82,9 +109,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "│1. A imp B\t .hyp \n",
+      "│2. B imp C\t .hyp \n",
+      "├─\n",
+      "││3. A\t .hyp \n",
+      "│├─\n",
+      "││4. B\t .imp elim 1,3\n",
+      "││5. C\t .imp elim 2,4\n",
+      "│6. A imp C\t .imp intro 3-5\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Another example, similar to the one above.\n",
     "line1 = \"A imp B .hyp\"\n",
@@ -115,9 +158,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[prf_str1]:\n",
+      "A imp B .hyp\n",
+      "B imp C .hyp\n",
+      "{{\n",
+      "  A .hyp\n",
+      "  B     .imp elim 1,3\n",
+      "  C     .imp elim 2,4\n",
+      "}}\n",
+      "A imp C .imp intro 3-5\n",
+      "\n",
+      "[prf_str2]:\n",
+      "A imp B\t .hyp\n",
+      "B imp C\t .hyp\n",
+      "{{\n",
+      "  A\t .hyp\n",
+      "  B\t .imp elim 1,3\n",
+      "  C\t .imp elim 2,4\n",
+      "}}\n",
+      "A imp C\t .imp intro 3-5\n",
+      "\n",
+      "[prf_str3]:\n",
+      "A imp B .hyp\n",
+      "B imp C .hyp\n",
+      "{{\n",
+      "  A .hyp\n",
+      "  B     .imp elim 1,3\n",
+      "  C     .imp elim 2,4\n",
+      "}}\n",
+      "A imp C .imp intro 3-5\n",
+      "\n",
+      "[prf_str4]:\n",
+      "A imp B\t .hyp\n",
+      "B imp C\t .hyp\n",
+      "{{\n",
+      "  A\t .hyp\n",
+      "  B\t .imp elim 1,3\n",
+      "  C\t .imp elim 2,4\n",
+      "}}\n",
+      "A imp C\t .imp intro 3-5\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# This is a test for the preprocessing function get_str_li().\n",
     "# The output of get_str_li() is a list of strings \n",
@@ -196,9 +286,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A imp B .hyp\n",
+      "{{\n",
+      "  A or C .hyp\n",
+      "  {{\n",
+      "    A .hyp\n",
+      "    B .imp elim 1,3\n",
+      "    B or C .or intro 4\n",
+      "  }}\n",
+      "  {{\n",
+      "    C .hyp\n",
+      "    B or C .or intro 6\n",
+      "  }}\n",
+      "  B or C .or elim 2,3-5,6-7\n",
+      "}}\n",
+      "A or C imp B or C .imp intro 2-8\n"
+     ]
+    }
+   ],
    "source": [
     "# Another example.\n",
     "\n",
@@ -225,9 +337,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "get_str_li(): same level and right_after_proves, but is_hyp\n",
+      "\tPerhaps you should indent the following line:\n",
+      "\t5. A\t .hyp\n"
+     ]
+    }
+   ],
    "source": [
     "# A buggy example.\n",
     "\n",
@@ -258,9 +380,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "│1. A\t .hyp \n",
+      "│2. B\t .hyp \n",
+      "├─\n",
+      "│3. A and B\t .and intro 1,2\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# This is the first test for the parser.\n",
     "# Validation is done too within the parser.\n",
@@ -277,9 +411,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "│1. A imp B\t .hyp \n",
+      "├─\n",
+      "││2. A or C\t .hyp \n",
+      "│├─\n",
+      "│││3. A\t .hyp \n",
+      "││├─\n",
+      "│││4. B\t .imp elim 1,3\n",
+      "│││5. B or C\t .or intro 4\n",
+      "│││6. C\t .hyp \n",
+      "││├─\n",
+      "│││7. B or C\t .or intro 6\n",
+      "││8. B or C\t .or elim 2,3-5,6-7\n",
+      "│9. A or C imp B or C\t .imp intro 2-8\n",
+      "\n",
+      "│1. A imp B\t .hyp \n",
+      "├─\n",
+      "││2. A or C\t .hyp \n",
+      "│├─\n",
+      "│││3. A\t .hyp \n",
+      "││├─\n",
+      "│││4. B\t\u001b[92m✓\u001b[39m imp elim 1,3\n",
+      "│││5. B or C\t\u001b[92m✓\u001b[39m or intro 4\n",
+      "│││6. C\t .hyp \n",
+      "││├─\n",
+      "│││7. B or C\t\u001b[92m✓\u001b[39m or intro 6\n",
+      "││8. B or C\t\u001b[92m✓\u001b[39m or elim 2,3-5,6-7\n",
+      "│9. A or C imp B or C\t\u001b[92m✓\u001b[39m imp intro 2-8\n"
+     ]
+    }
+   ],
    "source": [
     "# Show validation result.\n",
     "prf_str = '''\n",
@@ -304,9 +472,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "% \\usepackage{proofmood}\n",
+      "\\begin{fitchproof}\n",
+      "& \\pmvert \\pnumb{1} \\pform{A \\rightarrow B} & \\chknull & \\infrul{hyp} & \\pmnl\n",
+      "& \\pmproves & & & \\\\\n",
+      "& \\pmvert \\pmvert \\pnumb{2} \\pform{A \\vee C} & \\chknull & \\infrul{hyp} & \\pmnl\n",
+      "& \\pmvert \\pmproves & & & \\\\\n",
+      "& \\pmvert \\pmvert \\pmvert \\pnumb{3} \\pform{A} & \\chknull & \\infrul{hyp} & \\pmnl\n",
+      "& \\pmvert \\pmvert \\pmproves & & & \\\\\n",
+      "& \\pmvert \\pmvert \\pmvert \\pnumb{4} \\pform{B} & \\chkch & \\infrule{\\rightarrow}{elim}& \\pmprem{1,3} \\pmnl\n",
+      "& \\pmvert \\pmvert \\pmvert \\pnumb{5} \\pform{B \\vee C} & \\chkch & \\infrule{\\vee}{intro}& \\pmprem{4} \\pmnl\n",
+      "& \\pmvert \\pmvert & & & \\\\\n",
+      "& \\pmvert \\pmvert \\pmvert \\pnumb{6} \\pform{C} & \\chknull & \\infrul{hyp} & \\pmnl\n",
+      "& \\pmvert \\pmvert \\pmproves & & & \\\\\n",
+      "& \\pmvert \\pmvert \\pmvert \\pnumb{7} \\pform{B \\vee C} & \\chkch & \\infrule{\\vee}{intro}& \\pmprem{6} \\pmnl\n",
+      "& \\pmvert \\pmvert & & & \\\\\n",
+      "& \\pmvert \\pmvert \\pnumb{8} \\pform{B \\vee C} & \\chkch & \\infrule{\\vee}{elim}& \\pmprem{2,3-5,6-7} \\pmnl\n",
+      "& \\pmvert & & & \\\\\n",
+      "& \\pmvert \\pnumb{9} \\pform{A \\vee C \\rightarrow B \\vee C} & \\chkch & \\infrule{\\rightarrow}{intro}& \\pmprem{2-8} \\pmnl\n",
+      "\\end{fitchproof}\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# LaTeX output\n",
     "print(proof.build_fitch_latex(1))"
@@ -314,9 +509,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "│1. A imp B\t .hyp \n",
+      "├─\n",
+      "││2. A or C\t .hyp \n",
+      "│├─\n",
+      "│││3. # comment in hypothesis\n",
+      "│││4. A\t .hyp \n",
+      "││├─\n",
+      "│││5. B\t .imp elim 1,4\n",
+      "│││6. # below is a blank line\n",
+      "│││7. \n",
+      "│││8. B or C\t .and intro 5\n",
+      "│││9. C\t .hyp \n",
+      "││├─\n",
+      "│││10. B or C\t .or intro 1\n",
+      "││11. B or C\t .or elim 2,3-8,9-10\n",
+      "│12. A or C imp B or C\t .imp intro 2-11\n",
+      "\n",
+      "│1. A imp B\t .hyp \n",
+      "├─\n",
+      "││2. A or C\t .hyp \n",
+      "│├─\n",
+      "│││3. # comment in hypothesis\n",
+      "│││4. A\t .hyp \n",
+      "││├─\n",
+      "│││5. B\t\u001b[92m✓\u001b[39m imp elim 1,4\n",
+      "│││6. # below is a blank line\n",
+      "│││7. \n",
+      "│││8. B or C\t\u001b[91mx and intro 5\u001b[39m\n",
+      "│││9. C\t .hyp \n",
+      "││├─\n",
+      "│││10. B or C\t\u001b[91mx\u001b[39m or intro 1\n",
+      "││11. B or C\t\u001b[92m✓\u001b[39m or elim 2,3-8,9-10\n",
+      "│12. A or C imp B or C\t\u001b[92m✓\u001b[39m imp intro 2-11\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Show validation result.\n",
     "# Added some comments and blank lines to the above proof.\n",
@@ -350,9 +586,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'1-12': [0],\n",
+      " '1': [0, 0],\n",
+      " '2-11': [0, 1],\n",
+      " '2': [0, 1, 0],\n",
+      " '3-8': [0, 1, 1],\n",
+      " '3': [0, 1, 1, 0],\n",
+      " '4': [0, 1, 1, 1],\n",
+      " '5': [0, 1, 1, 2],\n",
+      " '6': [0, 1, 1, 3],\n",
+      " '7': [0, 1, 1, 4],\n",
+      " '8': [0, 1, 1, 5],\n",
+      " '9-10': [0, 1, 2],\n",
+      " '9': [0, 1, 2, 0],\n",
+      " '10': [0, 1, 2, 1],\n",
+      " '11': [0, 1, 3],\n",
+      " '12': [0, 2]}\n"
+     ]
+    }
+   ],
    "source": [
     "# proof.index_dict is a dictionary that maps line numbers \n",
     "# to indices.\n",
@@ -362,9 +621,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 <= 5\n",
+      "1 <= 8\n",
+      "1 <= 10\n",
+      "1 <= 11\n",
+      "1 <= 12\n",
+      "2-11 <= 12\n",
+      "2 <= 5\n",
+      "2 <= 8\n",
+      "2 <= 10\n",
+      "2 <= 11\n",
+      "3-8 <= 10\n",
+      "3-8 <= 11\n",
+      "3 <= 5\n",
+      "3 <= 8\n",
+      "4 <= 5\n",
+      "4 <= 8\n",
+      "5 <= 8\n",
+      "6 <= 8\n",
+      "7 <= 8\n",
+      "9-10 <= 11\n",
+      "9 <= 10\n"
+     ]
+    }
+   ],
    "source": [
     "# The order relation between nodes.\n",
     "# proof := parse_fitch(prf_str)\n",
@@ -379,9 +666,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "# FormulaProp.verified_by()\n",
     "\n",
@@ -395,9 +692,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "# FormulaProp.verified()\n",
     "\n",
@@ -425,9 +731,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "proof.verified_all()\n",
     "#^ This gives false because there is a line with wrong \n",
