--- a/tests/latex_in_jupyternotebook.ipynb
+++ b/tests/latex_in_jupyternotebook.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "We'll use $\\LaTeX$ to visualize and render logical syntactic objects such as terms, formulas, proof trees, logic tableaux etc.\n",
     "\n",
-    "<img src=\"../pics/fmla_and_prf.png\" width=450>\n",
+    "<img src=\"https://drive.google.com/uc?id=1FdxI2tpJHbt3iKmFwr8bYGpkgYLqsojR\" width=280>\n",
     "\n",
     "In Web, we have an excellent tool called MathJax.\n",
     "\n",
