Alpha-beta pruning
For later use in Fitch proof tree

--- a/logical_formulas/formula_methods.ipynb
+++ b/logical_formulas/formula_methods.ipynb
@@ -652,7 +652,7 @@
     "fmla_new = fmla_orig.substitute('x', new_node)\n",
     "if fmla_new: \n",
     "  fmla_new.display_infix() # will not execute\n",
-    "fmla_orig.display_infix() # mutilated"
+    "fmla_orig.display_infix() # mutated"
    ]
   }
  ],
