--- a/proofs_propositional/truth_table.ipynb
+++ b/proofs_propositional/truth_table.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -16,9 +16,11 @@
    ],
    "source": [
     "try:\n",
+    "  import sys\n",
+    "  sys.path.append('..')\n",
     "  from modules.truth_table import *\n",
     "except ImportError:\n",
-    "  url = 'https://raw.githubusercontent.com/jhjeong314/Proofmood/main/logical_formulas'\n",
+    "  url = 'https://raw.githubusercontent.com/jhjeong314/Proofmood/main/modules'\n",
     "  import httpimport\n",
     "  with httpimport.remote_repo(url):\n",
     "    from truth_table import *\n",
@@ -37,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -78,14 +80,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['forall x C1(x)', 'Q', 'B2(c, d + 1)']\n"
+      "['forall x C1(x)', 'B2(c, d + 1)', 'Q']\n"
      ]
     }
    ],
@@ -98,14 +100,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['forall x C1(x)', 'C2(y, z)', 'Q']\n"
+      "['forall x C1(x)', 'Q', 'C2(y, z)']\n"
      ]
     }
    ],
@@ -121,14 +123,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['forall x C1(x)', 'C2(y, z)', 'Q', 'B2(c, d + 1)']\n"
+      "['forall x C1(x)', 'B2(c, d + 1)', 'Q', 'C2(y, z)']\n"
      ]
     }
    ],
@@ -142,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +163,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "B2, id=3, bVal=-1, level=-1, alt_str=P_1\n",
+      "B2, id=1, bVal=-1, level=-1, alt_str=P_1\n",
       "or, id=-1, bVal=-1, level=-1, alt_str=\n",
       "Q, id=2, bVal=-1, level=-1, alt_str=Q\n",
       "and, id=-1, bVal=-1, level=-1, alt_str=\n",
@@ -169,7 +171,7 @@
       "imp, id=-1, bVal=-1, level=-1, alt_str=\n",
       "forall, id=0, bVal=-1, level=-1, alt_str=P_2\n",
       "and, id=-1, bVal=-1, level=-1, alt_str=\n",
-      "B2, id=3, bVal=-1, level=-1, alt_str=P_1\n"
+      "B2, id=1, bVal=-1, level=-1, alt_str=P_1\n"
      ]
     },
     {
@@ -190,7 +192,7 @@
      "text": [
       "forall, id=0, bVal=-1, level=-1, alt_str=P_2\n",
       "imp, id=-1, bVal=-1, level=-1, alt_str=\n",
-      "C2, id=1, bVal=-1, level=-1, alt_str=P_3\n",
+      "C2, id=3, bVal=-1, level=-1, alt_str=P_3\n",
       "iff, id=-1, bVal=-1, level=-1, alt_str=\n",
       "Q, id=2, bVal=-1, level=-1, alt_str=Q\n"
      ]
@@ -214,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -391,17 +393,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[3, 0, 1, 2]\n",
-      "[1, 2, 3, 0]\n",
-      "['P_2', 'P_3', 'Q', 'P_1']\n",
-      "['forall x C1(x)', 'C2(y, z)', 'Q', 'B2(c, d + 1)']\n",
+      "[1, 0, 3, 2]\n",
+      "[1, 0, 3, 2]\n",
+      "['P_2', 'P_1', 'Q', 'P_3']\n",
+      "['forall x C1(x)', 'B2(c, d + 1)', 'Q', 'C2(y, z)']\n",
       "['P_1', 'P_2', 'P_3', 'Q']\n",
       "['B2(c, d + 1)', 'forall x C1(x)', 'C2(y, z)', 'Q']\n"
      ]
@@ -426,14 +428,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['1', '1', '0', '0']\n"
+      "['1', '0', '0', '1']\n"
      ]
     }
    ],
@@ -447,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -458,7 +460,7 @@
       "\n",
       "forall, id=0, bVal=1, level=0, alt_str=P_2\n",
       "imp, id=-1, bVal=0, level=2, alt_str=\n",
-      "C2, id=1, bVal=1, level=0, alt_str=P_3\n",
+      "C2, id=3, bVal=1, level=0, alt_str=P_3\n",
       "iff, id=-1, bVal=0, level=1, alt_str=\n",
       "Q, id=2, bVal=0, level=0, alt_str=Q\n",
       "\n",
@@ -479,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -530,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -580,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -693,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -821,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -946,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1024,7 +1026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1129,7 +1131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1207,7 +1209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1259,7 +1261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1310,7 +1312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1358,7 +1360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1406,7 +1408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
