--- a/proofs_propositional/search_ann.ipynb
+++ b/proofs_propositional/search_ann.ipynb
@@ -6,9 +6,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
-    "sys.path.append('../')\n",
-    "from modules.search_prop import *"
+    "try:\n",
+    "  import sys\n",
+    "  sys.path.append('../')\n",
+    "  from modules.search_prop import *\n",
+    "except ImportError:\n",
+    "  url = 'https://raw.githubusercontent.com/jhjeong314/Proofmood/main/modules'\n",
+    "  import httpimport\n",
+    "  with httpimport.remote_repo(url):\n",
+    "    from search_prop import *"
    ]
   },
   {
@@ -24,9 +30,9 @@
     "\n",
     "As implied by the name `search_ann.ipynb,` each cell in this Jupyter notebook serves the following purposes:\n",
     "\n",
-    "    - When supplied with a proof text, it accurately annotates any lines that lack proper annotations within the conclusion formulas, assuming the requisite formulas or subproofs already exist.\n",
-    "    - Hypotheses, comments, and blank lines remain unaltered.\n",
-    "    - This process does not involve the creation or deletion of formulas or subproofs.\n"
+    "- When supplied with a proof text, it accurately annotates any lines that lack proper annotations within the conclusion formulas, assuming the requisite formulas or subproofs already exist.\n",
+    "- Hypotheses, comments, and blank lines remain unaltered.\n",
+    "- This process does not involve the creation or deletion of formulas or subproofs.\n"
    ]
   },
   {
