--- a/proofs_propositional/tautologies.ipynb
+++ b/proofs_propositional/tautologies.ipynb
@@ -6,9 +6,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
-    "sys.path.append('../')\n",
-    "from modules.validate_prop import *\n",
+    "try:\n",
+    "  import sys\n",
+    "  sys.path.append('../')\n",
+    "  from modules.validate_prop import *\n",
+    "except ImportError:\n",
+    "  url = 'https://raw.githubusercontent.com/jhjeong314/Proofmood/main/modules'\n",
+    "  import httpimport\n",
+    "  with httpimport.remote_repo(url):\n",
+    "    from validate_prop import *\n",
+    "\n",
     "from pprint import pprint"
    ]
   },
