--- a/proofs_propositional/search_ann_ex1.ipynb
+++ b/proofs_propositional/search_ann_ex1.ipynb
@@ -6,9 +6,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
-    "sys.path.append('../')\n",
-    "from modules.search_prop import *"
+    "try:\n",
+    "  import sys\n",
+    "  sys.path.append('../')\n",
+    "  from modules.search_prop import *\n",
+    "except ImportError:\n",
+    "  url = 'https://raw.githubusercontent.com/jhjeong314/Proofmood/main/modules'\n",
+    "  import httpimport\n",
+    "  with httpimport.remote_repo(url):\n",
+    "    from search_prop import *"
    ]
   },
   {
